# paper

./: .gitignore  README.md  pyproject.toml
doc/: how-to-use.md  knowledge_base.md  papercli_modules.md  pdf_format.md  promt.md  topic_analysis.md  track.md
papercli/: __init__.py  cache.py  cli.py  config.py  doc2x.py  eval.py  extract.py  gemini.py  llm.py  models.py  output.py  pdf_fetch.py  pipeline.py  query.py  rank.py  slide.py  structure.py  topics.py
papercli/review/: __init__.py  critique.py  lint.py  models.py  prompts.py
papercli/sources/: __init__.py  arxiv.py  base.py  openalex.py  pubmed.py  scholar.py  zotero.py
skill/: SKILL.md
tests/: __init__.py  conftest.py  test_arxiv.py  test_cite_report.py  test_dedup.py  test_eval.py  test_extract_doc2x.py  test_filters.py  test_gemini.py  test_llm_json.py  test_openalex.py  test_pdf_fetch.py  test_pubmed.py  test_review_critique.py  test_review_lint.py  test_scholar.py  test_slide.py  test_structure_jsonl.py  test_topics.py  test_zotero.py
